Fix multiple image rows spacing

--- a/app/assets/stylesheets/spaces-edit.css.scss
+++ b/app/assets/stylesheets/spaces-edit.css.scss
@@ -107,6 +107,7 @@
       position: relative;
       height: 155px;
       background-size: cover;
+      margin-bottom: 20px;
       .hover {
         display: none;
         position: absolute;
